--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,8 @@
   "main": "index.js",
   "scripts": {
     "setup-project": "npm i && cd client && npm i",
-    "dev": "nodemon server.js",
-    "watch": "node --watch server.js"
+    "start": "nodemon server",
+    "thao": "concurrently --kill-others-on-fail \"npm run start\" \"cd ../my-app-thao && npm start\""
   },
   "keywords": [],
   "author": "",
