--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "setup-project": "npm i && cd client && npm i",
     "start": "nodemon server",
-    "thao": "concurrently --kill-others-on-fail \"npm run start\" \"cd ../my-app-thao && npm start\""
+    "thao": "concurrently --kill-others-on-fail \"npm run start\" \"cd ../client && npm start\""
   },
   "keywords": [],
   "author": "",
